--- a/4-WebApp-your-API/4-2-B2C/TodoListService/TodoListService.csproj
+++ b/4-WebApp-your-API/4-2-B2C/TodoListService/TodoListService.csproj
@@ -10,4 +10,6 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="1.8.0" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
