--- a/4-WebApp-your-API/4-2-B2C/Client/appsettings.json
+++ b/4-WebApp-your-API/4-2-B2C/Client/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://fabrikamb2c.b2clogin.com",
-    "ClientId": "fdb91ff5-5ce6-41f3-bdbd-8267c817015d",
-    "Domain": "fabrikamb2c.onmicrosoft.com",
+    "Instance": "https://ioaseapp.b2clogin.com",
+    "ClientId": "04e43293-05fc-493c-9fd9-20d221dc4b9d",
+    "Domain": "ioaseapp.onmicrosoft.com",
     "SignedOutCallbackPath": "/signout/B2C_1_susi",
-    "SignUpSignInPolicyId": "b2c_1_susi",
-    "ResetPasswordPolicyId": "b2c_1_reset",
-    "EditProfilePolicyId": "b2c_1_edit_profile", // Optional profile editing policy
-    "ClientSecret": "X330F3#92!z614M4"
+    "SignUpSignInPolicyId": "B2C_1_signupsignin1",
+    "ResetPasswordPolicyId": "B2C_1_passwordreset1",
+    "EditProfilePolicyId": "B2C_1_profileediting1", // Optional profile editing policy
+    "ClientSecret": ".BRoKtVroXwoi6kLR0DP8VNw4I1Q_-_oSk"
     //"CallbackPath": "/signin/B2C_1_sign_up_in"  // defaults to /signin-oidc
   },
   "TodoList": {
@@ -17,9 +17,9 @@
       - a scope corresponding to a V1 application (for instance <GUID>/user_impersonation, where  <GUID> is the
         clientId of a V1 application, created in the https://portal.azure.com portal.
     */
-    "TodoListScope": "https://fabrikamb2c.onmicrosoft.com/tasks/read",
- //   "TodoListScope": "https://fabrikamb2c.onmicrosoft.com/tasks",
-    "TodoListBaseAddress": "https://localhost:44332"
+    "TodoListScope": "https://ioaseapp.onmicrosoft.com/api/access_as_user",
+    "ReadScope": "https://ioaseapp.onmicrosoft.com/api/read",
+    "TodoListBaseAddress": "https://localhost:44321"
 
   },
   "Logging": {
