--- a/4-WebApp-your-API/4-2-B2C/TodoListService/appsettings.json
+++ b/4-WebApp-your-API/4-2-B2C/TodoListService/appsettings.json
@@ -1,13 +1,13 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://fabrikamb2c.b2clogin.com",
-    "ClientId": "90c0fe63-bcf2-44d5-8fb7-b8bbc0b29dc6",
-    "Domain": "fabrikamb2c.onmicrosoft.com",
-    "SignedOutCallbackPath": "/signout/B2C_1_susi",
-    "SignUpSignInPolicyId": "b2c_1_susi",
-    "ResetPasswordPolicyId": "b2c_1_reset",
-    "EditProfilePolicyId": "b2c_1_edit_profile" // Optional profile editing policy
-    //"CallbackPath": "/signin/B2C_1_sign_up_in"  // defaults to /signin-oidc
+    "Instance": "https://ioaseapp.b2clogin.com",
+    "ClientId": "efd63c33-e608-4d89-b427-926e367be817",
+    "Domain": "ioaseapp.onmicrosoft.com",
+    "SignedOutCallbackPath": "/signout/B2C_1_susi", //not to update
+    "SignUpSignInPolicyId": "B2C_1_signupsignin1",
+    "ResetPasswordPolicyId": "B2C_1_passwordreset1",
+    "EditProfilePolicyId": "B2C_1_profileediting1", // Optional profile editing policy
+    "CallbackPath": "/signin/B2C_1_sign_up_in"  // defaults to /signin-oidc
   },
   "Kestrel": {
     "Endpoints": {
