--- a/4-WebApp-your-API/4-2-B2C/TodoListService/TodoListService.csproj
+++ b/4-WebApp-your-API/4-2-B2C/TodoListService/TodoListService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="3.29.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.8.0" />
   </ItemGroup>
 
